[OSE-166] Scaffolding for /v1/presentations/submissions (#171)
* Initial create, delete, get for submissions

* Basic tests for the router

* Added the rest of the scaffolding

* Added List and Review

* Removed the delete method

* Simplified for scaffolding

* spec

* zero structs

* Consolidate under the same API

* mage spec

* Minor updates

* [OSE-167] Scaffolding for /v1/operations (#172)

* The simplest scaffolding possible

* rename


* Fix lint and compilation

* PR fixes

* rename

* regen

* spec

* Removed unused config

* reviews
