# doc/swagger.yaml
@@ -597,6 +597,13 @@ definitions:
       schemaJwt:
         type: string
     type: object
+  github.com_tbd54566975_ssi-service_pkg_server_router.CreateSubmissionRequest:
+    properties:
+      submissionJwt:
+        type: string
+    required:
+    - submissionJwt
+    type: object
   github.com_tbd54566975_ssi-service_pkg_server_router.GetApplicationResponse:
     properties:
       application:
@@ -725,7 +732,38 @@ definitions:
           $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.GetSchemaResponse'
         type: array
     type: object
+  github.com_tbd54566975_ssi-service_pkg_server_router.GetSubmissionResponse:
+    properties:
+      submission:
+        $ref: '#/definitions/exchange.PresentationSubmission'
+    type: object
+  github.com_tbd54566975_ssi-service_pkg_server_router.ListSubmissionRequest:
+    properties:
+      filter:
+        type: string
+    type: object
+  github.com_tbd54566975_ssi-service_pkg_server_router.ListSubmissionResponse:
+    properties:
+      submissions:
+        items:
+          $ref: '#/definitions/exchange.PresentationSubmission'
+        type: array
+    type: object
   github.com_tbd54566975_ssi-service_pkg_server_router.Operation:
+    properties:
+      done:
+        type: boolean
+      id:
+        type: string
+      result:
+        $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.OperationResult'
+    type: object
+  github.com_tbd54566975_ssi-service_pkg_server_router.OperationResult:
+    properties:
+      error:
+        type: string
+      response:
+        $ref: '#/definitions/exchange.PresentationSubmission'
     type: object
   github.com_tbd54566975_ssi-service_pkg_server_router.ResolveDIDResponse:
     properties:
@@ -735,6 +773,20 @@ definitions:
         $ref: '#/definitions/did.DIDDocumentMetadata'
       didResolutionMetadata:
         $ref: '#/definitions/did.DIDResolutionMetadata'
+    type: object
+  github.com_tbd54566975_ssi-service_pkg_server_router.ReviewSubmissionRequest:
+    properties:
+      approved:
+        type: boolean
+      reason:
+        type: string
+    required:
+    - approved
+    type: object
+  github.com_tbd54566975_ssi-service_pkg_server_router.ReviewSubmissionResponse:
+    properties:
+      submission:
+        $ref: '#/definitions/exchange.PresentationSubmission'
     type: object
   github.com_tbd54566975_ssi-service_pkg_server_router.StoreKeyRequest:
     properties:
@@ -1041,6 +1093,13 @@ definitions:
       schemaJwt:
         type: string
     type: object
+  pkg_server_router.CreateSubmissionRequest:
+    properties:
+      submissionJwt:
+        type: string
+    required:
+    - submissionJwt
+    type: object
   pkg_server_router.GetApplicationResponse:
     properties:
       application:
@@ -1169,7 +1228,38 @@ definitions:
           $ref: '#/definitions/pkg_server_router.GetSchemaResponse'
         type: array
     type: object
+  pkg_server_router.GetSubmissionResponse:
+    properties:
+      submission:
+        $ref: '#/definitions/exchange.PresentationSubmission'
+    type: object
+  pkg_server_router.ListSubmissionRequest:
+    properties:
+      filter:
+        type: string
+    type: object
+  pkg_server_router.ListSubmissionResponse:
+    properties:
+      submissions:
+        items:
+          $ref: '#/definitions/exchange.PresentationSubmission'
+        type: array
+    type: object
   pkg_server_router.Operation:
+    properties:
+      done:
+        type: boolean
+      id:
+        type: string
+      result:
+        $ref: '#/definitions/pkg_server_router.OperationResult'
+    type: object
+  pkg_server_router.OperationResult:
+    properties:
+      error:
+        type: string
+      response:
+        $ref: '#/definitions/exchange.PresentationSubmission'
     type: object
   pkg_server_router.ResolveDIDResponse:
     properties:
@@ -1179,6 +1269,20 @@ definitions:
         $ref: '#/definitions/did.DIDDocumentMetadata'
       didResolutionMetadata:
         $ref: '#/definitions/did.DIDResolutionMetadata'
+    type: object
+  pkg_server_router.ReviewSubmissionRequest:
+    properties:
+      approved:
+        type: boolean
+      reason:
+        type: string
+    required:
+    - approved
+    type: object
+  pkg_server_router.ReviewSubmissionResponse:
+    properties:
+      submission:
+        $ref: '#/definitions/exchange.PresentationSubmission'
     type: object
   pkg_server_router.StoreKeyRequest:
     properties:
@@ -1757,7 +1861,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.GetManifestsResponse'
+            $ref: '#/definitions/pkg_server_router.GetManifestsResponse'
         "400":
           description: Bad request
           schema:
@@ -1779,14 +1883,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.CreateManifestRequest'
+          $ref: '#/definitions/pkg_server_router.CreateManifestRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.CreateManifestResponse'
+            $ref: '#/definitions/pkg_server_router.CreateManifestResponse'
         "400":
           description: Bad request
           schema:
@@ -1843,7 +1947,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.GetManifestResponse'
+            $ref: '#/definitions/pkg_server_router.GetManifestResponse'
         "400":
           description: Bad request
           schema:
@@ -1863,7 +1967,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.GetApplicationsResponse'
+            $ref: '#/definitions/pkg_server_router.GetApplicationsResponse'
         "400":
           description: Bad request
           schema:
@@ -1886,14 +1990,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.SubmitApplicationRequest'
+          $ref: '#/definitions/pkg_server_router.SubmitApplicationRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.SubmitApplicationResponse'
+            $ref: '#/definitions/pkg_server_router.SubmitApplicationResponse'
         "400":
           description: Bad request
           schema:
@@ -1950,7 +2054,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.GetApplicationResponse'
+            $ref: '#/definitions/pkg_server_router.GetApplicationResponse'
         "400":
           description: Bad request
           schema:
@@ -1970,7 +2074,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.GetResponsesResponse'
+            $ref: '#/definitions/pkg_server_router.GetResponsesResponse'
         "400":
           description: Bad request
           schema:
@@ -2027,7 +2131,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.GetResponseResponse'
+            $ref: '#/definitions/pkg_server_router.GetResponseResponse'
         "400":
           description: Bad request
           schema:
@@ -2104,14 +2208,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.CreatePresentationDefinitionRequest'
+          $ref: '#/definitions/pkg_server_router.CreatePresentationDefinitionRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.CreatePresentationDefinitionResponse'
+            $ref: '#/definitions/pkg_server_router.CreatePresentationDefinitionResponse'
         "400":
           description: Bad request
           schema:
@@ -2168,7 +2272,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github.com_tbd54566975_ssi-service_pkg_server_router.GetPresentationDefinitionResponse'
+            $ref: '#/definitions/pkg_server_router.GetPresentationDefinitionResponse'
         "400":
           description: Bad request
           schema:
@@ -2176,6 +2280,92 @@ paths:
       summary: Get PresentationDefinition
       tags:
       - PresentationDefinitionAPI
+  /v1/presentations/submission/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a submission by its ID
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/pkg_server_router.GetSubmissionResponse'
+        "400":
+          description: Bad request
+          schema:
+            type: string
+      summary: Get Submission
+      tags:
+      - SubmissionAPI
+  /v1/presentations/submissions:
+    get:
+      consumes:
+      - application/json
+      description: Reviews a pending submission. After this method is called, the
+        operation with `id==presentations/submissions/{submission_id}` will be updated
+        with the result of this invocation.
+      parameters:
+      - description: request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/pkg_server_router.ReviewSubmissionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/pkg_server_router.ReviewSubmissionResponse'
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Review a pending submissions
+      tags:
+      - SubmissionAPI
+    put:
+      consumes:
+      - application/json
+      description: Creates a submission in this server ready to be reviewed.
+      parameters:
+      - description: request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/pkg_server_router.CreateSubmissionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/pkg_server_router.Operation'
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Create Submission
+      tags:
+      - SubmissionAPI
   /v1/schemas:
     get:
       consumes:
